# Lex_Forge

./: Dockerfile  README.md  baseline_scores.json  client.py  fix_and_deploy.sh.save  inference.py  inference.py.bak  models.py  openenv.yaml  parser_agent.py  pyproject.toml  requirements.txt
server/: Dockerfile  app.py  environment.py  fixtures.py  graders.py  models.py  requirements.txt
